# Sentinel-Android-Assistant

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: agent.gbnf  entities.gbnf  intent.gbnf  plan.gbnf  risk.gbnf  tool_params.gbnf
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native_inference.cpp  native_inference.hpp  native_logging.hpp  native_state.cpp  native_state.hpp  native_utils.cpp  native_utils.hpp  sentinel.hpp
app/src/main/java/com/mazzlabs/sentinel/: SentinelApplication.kt
app/src/main/java/com/mazzlabs/sentinel/capture/: ScreenCaptureManager.kt
app/src/main/java/com/mazzlabs/sentinel/core/: AgentController.kt  GrammarManager.kt  JsonExtractor.kt  NativeBridge.kt  SystemPromptBuilder.kt
app/src/main/java/com/mazzlabs/sentinel/graph/: AgentGraph.kt  AgentOrchestrator.kt  AgentState.kt  EnhancedAgentOrchestrator.kt  SessionManager.kt
app/src/main/java/com/mazzlabs/sentinel/input/: VoiceInputManager.kt
app/src/main/java/com/mazzlabs/sentinel/model/: AgentModels.kt
app/src/main/java/com/mazzlabs/sentinel/overlay/: OverlayManager.kt  SelectionOverlayManager.kt
app/src/main/java/com/mazzlabs/sentinel/receiver/: BootReceiver.kt
app/src/main/java/com/mazzlabs/sentinel/security/: ActionFirewall.kt  ActionRiskClassifier.kt
app/src/main/java/com/mazzlabs/sentinel/service/: ActionDispatcher.kt  AgentAccessibilityService.kt  ElementRegistry.kt  InferenceService.kt  UITreeFlattener.kt
app/src/main/java/com/mazzlabs/sentinel/tools/: AlarmTools.kt  CalendarTools.kt  PhoneTools.kt  Tool.kt
app/src/main/java/com/mazzlabs/sentinel/tts/: TTSManager.kt
app/src/main/java/com/mazzlabs/sentinel/ui/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/layout/: activity_main.xml  overlay_button.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  data_extraction_rules.xml
app/src/test/java/com/mazzlabs/sentinel/core/: AgentControllerTest.kt  JsonExtractorTest.kt  SystemPromptBuilderTest.kt
app/src/test/java/com/mazzlabs/sentinel/graph/: AgentGraphTest.kt  AgentStateTest.kt  EnhancedGraphNodesTest.kt  GraphNodesTest.kt  SelectionProcessorNodeTest.kt  SessionManagerTest.kt
app/src/test/java/com/mazzlabs/sentinel/model/: AgentActionTest.kt  AgentModelsTest.kt
app/src/test/java/com/mazzlabs/sentinel/security/: ActionFirewallTest.kt  ActionRiskClassifierTest.kt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  TOOLS.md  TROUBLESHOOTING.md
gradle/: libs.versions.toml
scripts/: deploy.sh  setup_llama.sh
(+25 files in other folders)
